[package]
name = "riker_producer"
version = "0.1.0"
authors = ["Martin Lacko <martin.lacko@simplestaking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
riker = "0.4"

[[example]]
name = "interrupted"

[[example]]
name = "exhausted"